language2Ext.json 설정 추가